<resources>
    <string name="app_name">SubmissionAndroid2</string>

    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="hint">Cari Username</string>
    <string name="cari">Cari</string>
    <string name="image_user">Image_user</string>
    <string name="nama_user">nama_user</string>
    <string name="following">following</string>
    <string name="follower">follower</string>
    <string name="icon_following">icon following</string>
    <string name="icon_follower">icon follower</string>
    <string name="detail">detail</string>
    <string name="name">name</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="menu_3">menu_3</string>
    <string name="username">username</string>
</resources>